[REFACTOR]: Fix maintainability for main report and test.